# SVGnest

./: .gitignore  LICENSE.txt  index.html  readme.md  style.css  svgnest.js  svgparser.js
converter/: README.md  pyproject.toml  server.py
font/: latolatinfonts.css  stylesheet.css
util/: domparser.js  eval.js  geometryutil.js  matrix.js  parallel.js  pathsegpolyfill.js  placementworker.js  sendLog.js
